[gd_scene load_steps=7 format=3 uid="uid://bg11eow76lcyn"]

[ext_resource type="Script" path="res://scripts/boat.gd" id="1_8uxof"]
[ext_resource type="PackedScene" uid="uid://dt6bxmw7stlh8" path="res://scenes/interact_box.tscn" id="1_mtgiy"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_g8o2v"]
albedo_color = Color(0.4, 0.1976, 0.136, 1)

[sub_resource type="BoxMesh" id="BoxMesh_xri4x"]
material = SubResource("StandardMaterial3D_g8o2v")
size = Vector3(3, 1.5, 1.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_2wu2w"]
size = Vector3(3, 1.5, 1.5)

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_m0ynb"]
radius = 1.25
height = 5.0

[node name="boat" type="RigidBody3D"]
collision_layer = 0
collision_mask = 17
axis_lock_angular_x = true
axis_lock_angular_z = true
script = ExtResource("1_8uxof")

[node name="boatMesh" type="MeshInstance3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0948396, 0, 0.0948396)
mesh = SubResource("BoxMesh_xri4x")

[node name="boatCol" type="CollisionShape3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0948396, 0, 0.0948396)
shape = SubResource("BoxShape3D_2wu2w")

[node name="enterBox" parent="." instance=ExtResource("1_mtgiy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0948396, 0, 0.0948396)
size = Vector3(3, 1.5, 1.5)
object_name = "boat"
object_prompt = "enter [e]"
interact_ret = "boat_enter"

[node name="exitBox" parent="." instance=ExtResource("1_mtgiy")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0948396, 0, 0.0948396)
use_collision = false
size = Vector3(3, 1.5, 1.5)
object_name = "boat"
object_prompt = "exit [e]"
interactable = false
interact_ret = "boat_exit"

[node name="playerPosition" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0948395, 1.67954, -0.474198)

[node name="exitPosition" type="Node3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, 1.90516, 0.679538, -0.474198)

[node name="shoreFinder" type="Area3D" parent="."]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -0.0948396, 0, 0.0948396)
collision_layer = 0

[node name="CollisionShape3D" type="CollisionShape3D" parent="shoreFinder"]
transform = Transform3D(-4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 0, 0, 1, 0, 0, 0)
shape = SubResource("CapsuleShape3D_m0ynb")
